# incubator

./: .gitignore  CMakeLists.txt  Jenkinsfile  LICENSE  README.md  api-redesign.diff  configure  disabled-Jenkinsfile  setup.sh
.ci/ubuntu-20.04/: Dockerfile
cmake/: CAFIncubatorConfig.cmake.in  FindCAF.cmake  FindPicoTLS.cmake  FindQuicly.cmake  caf-generate-enum-strings.cpp  check-compiler-features.cpp  get_compiler_version.cpp  incubator-test.cpp  incubator-test.hpp
examples/: CMakeLists.txt
examples/net/: web-socket-calculator.cpp  web-socket-client.cpp  web-socket-feed.cpp  web-socket-flow-client.cpp
libcaf_bb/: CMakeLists.txt
libcaf_bb/caf/bb/: container_source.hpp  file_reader.hpp  stream_reader.hpp  tokenized_integer_reader.hpp
libcaf_bb/caf/bb/test/: bb_test_type_ids.hpp
libcaf_bb/caf/policy/: tokenized_integer_reader.hpp
libcaf_bb/test/: bb-test.cpp  bb-test.hpp  container_source.cpp  file_reader.cpp  stream_reader.cpp  tokenized_integer_reader.cpp
libcaf_net/: CMakeLists.txt
libcaf_net/caf/detail/: caf_net_backports.hpp  ptls_util.hpp  quicly_cb.hpp  quicly_util.hpp
libcaf_net/caf/net/: abstract_actor_shell.hpp  abstract_socket.hpp  actor_proxy_impl.hpp  actor_shell.hpp  all.hpp  connection_acceptor.hpp  consumer.hpp  consumer_queue.hpp  datagram_adaptor.hpp  datagram_oriented_layer_ptr.hpp  datagram_transport.hpp  defaults.hpp  doorman.hpp  endpoint_manager.hpp  endpoint_manager_impl.hpp  endpoint_manager_queue.hpp  fwd.hpp  length_prefix_framing.hpp  make_endpoint_manager.hpp  message_oriented_layer_ptr.hpp  middleman.hpp  middleman_backend.hpp  multiplexer.hpp  openssl_transport.hpp  outgoing_message_handler.hpp  outgoing_message_queue.hpp  packet_writer_decorator.hpp  pollset_updater.hpp  quic_transport.hpp  serializing_worker.hpp  slicing.hpp  slicing_header.hpp  socket.hpp  socket_manager.hpp  stream_oriented_layer_ptr.hpp  stream_transport.hpp  timeout_proxy.hpp  transport_base.hpp  transport_worker.hpp  transport_worker_dispatcher.hpp  (+3 more)
libcaf_net/caf/net/backend/: tcp.hpp  test.hpp  udp.hpp
libcaf_net/caf/net/basp/: actor_proxy_impl.hpp  application.hpp  application_factory.hpp  connection_state.hpp  constants.hpp  datagram_application_factory.hpp  header.hpp  message_queue.hpp  message_type.hpp  msg.hpp  protocol.hpp  protocol_layer_ptr.hpp  protocol_ptr.hpp  remote_message_handler.hpp  tag.hpp  worker.hpp
libcaf_net/caf/net/quic/: quic.hpp  types.hpp
libcaf_net/caf/net/reliability/: delivery.hpp  delivery_header.hpp  ordering.hpp  ordering_header.hpp  reliability.hpp  reliability_header.hpp
libcaf_net/caf/net/web_socket/: client.hpp  framing.hpp
libcaf_net/caf/tag/: datagram_oriented.hpp
libcaf_net/src/: actor_proxy_impl.cpp  application.cpp  defaults.cpp  endpoint_manager.cpp  header.cpp  multiplexer.cpp  outgoing_message_queue.cpp  ptls_util.cpp  quic.cpp  quicly_cb.cpp  quicly_util.cpp  serializing_worker.cpp  socket_manager.cpp  stream_socket.cpp  timeout_proxy.cpp  worker.cpp
libcaf_net/src/basp/: application.cpp  connection_state_strings.cpp
libcaf_net/src/detail/: caf_net_backports.cpp
libcaf_net/src/net/: abstract_actor_shell.cpp  actor_shell.cpp  consumer_queue.cpp  middleman.cpp
libcaf_net/src/net/backend/: tcp.cpp  test.cpp  udp.cpp
libcaf_net/src/net/basp/: actor_proxy_impl.cpp
libcaf_net/test/: accept_socket.cpp  application.cpp  datagram_transport.cpp  doorman.cpp  endpoint_manager.cpp  header.cpp  multiplexer.cpp  net-test.cpp  net-test.hpp  pipe_socket.cpp  quic_transport.cpp  socket.cpp  stream_application.cpp  stream_socket.cpp  stream_transport.cpp  string_application.cpp  transport_worker.cpp  transport_worker_dispatcher.cpp
libcaf_net/test/detail/: rfc6455.cpp
libcaf_net/test/net/: actor_shell.cpp  length_prefix_framing.cpp  slicing.cpp  typed_actor_shell.cpp  web_socket_server.cpp
libcaf_net/test/net/backend/: tcp.cpp  udp.cpp
libcaf_net/test/net/basp/: ping_pong.cpp  protocol.cpp  worker.cpp
libcaf_net/test/net/reliability/: delivery.cpp  ordering.cpp  reliability.cpp
libcaf_net/test/net/web_socket/: server.cpp
